# xvg_plot

./: CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements.txt
tests/: test_runner.py  test_xvg_analysis.py
tests/other_xvg/: cphmd-coord-1-25.xvg  hbnum.xvg  resarea.xvg  rmsd_plot.html  rmsf_plot.html
tests/prot1/: 2dproj.xvg  energy.xvg  gyrate.xvg  rmsd.xvg  rmsf.xvg  sasa.xvg
tests/prot2/: 2dproj.xvg  energy.xvg  gyrate.xvg  rmsd.xvg  rmsf.xvg  sasa.xvg
tests/prot3/: rmsf.xvg  rmsf_chA.xvg  rmsf_chB.xvg  rmsf_chC.xvg
xvg_analysis/: xvg_analysis.py  xvg_plot.py
xvg_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
