[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xvg-analysis"
version = "1.3.0"
description = "XVG analysis tool for GROMACS output files with interactive Plotly plotting and multi-file comparison"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "User", email = "user@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.14.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "build>=1.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pytest>=7.0.0",
]

[project.scripts]
xvg_plot = "xvg_analysis.xvg_plot:main"

[tool.setuptools]
packages = ["xvg_analysis"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
